fix(PHP8): added support for PHP 8

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "dusank/knapsack",
+  "name": "tadasalisauskas/knapsack",
   "license": "MIT",
   "type": "library",
   "description": "Collection library for PHP",
