--- a/ci/phpspec-with-coverage.yml
+++ b/ci/phpspec-with-coverage.yml
@@ -12,5 +12,5 @@ code_coverage:
 suites:
   default:
     spec_path: tests
-    namespace: DusanKasan\Knapsack
-    psr4_prefix: DusanKasan\Knapsack
+    namespace: Invertus\Knapsack
+    psr4_prefix: Invertus\Knapsack
