--- a/phpspec.yml
+++ b/phpspec.yml
@@ -4,5 +4,5 @@ extensions:
 suites:
   default:
     spec_path: tests
-    namespace: DusanKasan\Knapsack
-    psr4_prefix: DusanKasan\Knapsack
+    namespace: Invertus\Knapsack
+    psr4_prefix: Invertus\Knapsack
